--- a/frontend/front-end/index.html
+++ b/frontend/front-end/index.html
@@ -7,15 +7,77 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/js/all.min.js"></script> -->
-    <title>Multivendor</title>
+    <title>Multivendyy</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/src/main.js"></script>
-    <script src="/src/jquery-1.10.2.min.js"></script>
+
   </body>
 </html>
+
+
+
+<!-- 
+   /* <div className="main">
+            <div className="lst_prod">
+               <div className="lst_prod_inner">
+                  <div className="lst_prod_box">
+                     <img src={reactLogo} alt="" />
+                     <h3>React</h3>
+                     <p>$30</p>
+                     <div className="buttons">
+                        <button title='Add To Cart'><i className="fa fa-cart-plus"></i></button>
+                        <button title='Add To Wishlist' id='wishlist'><i className="fa fa-heart"></i></button>
+                     </div>
+                  </div>
+
+                  <div className="lst_prod_box">
+                     <img src={reactLogo} alt="" />
+                     <h3>React</h3>
+                     <p>$30</p>
+                     <div className="buttons">
+                        <button title='Add To Cart'><i className="fa fa-cart-plus"></i></button>
+                        <button title='Add To Wishlist' id='wishlist'><i className="fa fa-heart"></i></button>
+                     </div>
+                  </div>
+
+                  <div className="lst_prod_box">
+                     <img src={reactLogo} alt="" />
+                     <h3>React</h3>
+                     <p>$30</p>
+                     <div className="buttons">
+                        <button title='Add To Cart'><i className="fa fa-cart-plus"></i></button>
+                        <button title='Add To Wishlist' id='wishlist'><i className="fa fa-heart"></i></button>
+                     </div>
+                  </div>
+
+                  <div className="lst_prod_box">
+                     <img src={reactLogo} alt="" />
+                     <h3>React</h3>
+                     <p>$30</p>
+                     <div className="buttons">
+                        <button title='Add To Cart'><i className="fa fa-cart-plus"></i></button>
+                        <button title='Add To Wishlist' id='wishlist'><i className="fa fa-heart"></i></button>
+                     </div>
+                  </div>
+
+               </div>
+
+            </div>
+
+         </div> */
+ -->
+
+
+
+
+
+
+
+
+
 <!-- 
   <h3></h3>
    <div className="main-header">
